k8s/network-policies/allow-backend-to-mongo.yaml
# Backend → MongoDB.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-mongo
  namespace: inventario-itu
spec:
  podSelector:
    matchLabels:
      app: inventario-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: inventario-backend
      ports:
        - protocol: TCP
          port: 27017
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-egress-mongo
  namespace: inventario-itu
spec:
  podSelector:
    matchLabels:
      app: inventario-backend
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: inventario-db
      ports:
        - protocol: TCP
          port: 27017
